--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">¿Que es la programación?</a>
+                        <a class="nav-link active" aria-current="page" href="#¿que-es?">¿Que es la programación?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Lenguajes de programación</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" >Creditos</a>
-                    </li> 
+                        <a class="nav-link">Creditos</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -44,6 +44,24 @@
             <h1 class="text-center">FUNDAMENTOS BASICOS DE LA PROGRAMACIÓN</h1>
         </div>
         <!-- <video src="assets/imagenes/videoplayback.mp4" muted autoplay loop></video> -->
+    </section>
+
+    <section id="¿que-es?" class="programacion-contenedor">
+        <div class="card mb-3" style="max-width: 1100px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="assets/imagenes/86c0559f-eb51-49c3-ab0e-9fa9f7c19df3.jpeg" class="img-fluid rounded-start" alt="programación">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">¿Qué es la programación?</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
