Cambios en la pagina

--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
                 </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#¿que-es?">¿Que es la programación?</a>
+                        <a class="nav-link" aria-current="page" href="#fundamental">Conceptos fundamentales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Lenguajes de programación</a>
+                        <a class="nav-link" href="#">Diagramas de flujo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Creditos</a>
+                        <a class="nav-link" href="#">Editores de código (IDE)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Programación Orientada a Objetos (POO)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Aprende a programar</a>
                     </li>
                 </ul>
             </div>
@@ -40,25 +46,93 @@
 
     <section class="hero">
         <div class="container hero-contenedor">
-            <img src="assets/imagenes/logo_programacion.png" alt="programación">
+            <img src="assets/imagenes/logo_programacion.png" alt="Programación-logo" class="img-fluid">
             <h1 class="text-center">FUNDAMENTOS BASICOS DE LA PROGRAMACIÓN</h1>
         </div>
         <!-- <video src="assets/imagenes/videoplayback.mp4" muted autoplay loop></video> -->
     </section>
 
-    <section id="¿que-es?" class="programacion-contenedor">
-        <div class="card mb-3" style="max-width: 1100px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="assets/imagenes/86c0559f-eb51-49c3-ab0e-9fa9f7c19df3.jpeg" class="img-fluid rounded-start" alt="programación">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">¿Qué es la programación?</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    <section id="fundamental">
+        <div class="container-fluid programacion-contenedor">
+            <h1>Conceptos fundamentales</h1>
+            <div class="card mb-3" style="max-width: 1300px;">
+                <div class="row">
+                    <div class="col-md-4 card-imagen-contenedor">
+                        <img src="assets/imagenes/86c0559f-eb51-49c3-ab0e-9fa9f7c19df3.jpeg" class="img-fluid"
+                            alt="programación">
                     </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title">¿Qué es la programación?</h3>
+                            <p class="card-text">La programación es el acto de organizar una secuencia de pasos
+                                ordenados
+                                para llevar a cabo una tarea específica. En el contexto de la informática, la
+                                programación
+                                se refiere a la creación de programas o aplicaciones mediante el desarrollo de un código
+                                fuente. Este código, escrito en lenguajes de programación, permite que los ordenadores
+                                ejecuten tareas solicitadas por los usuarios.</p>
+                            <p class="card-text"><small class="text-body-secondary">Ultima actualizción 25 de abril del
+                                    2024</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 1300px;">
+                <div class="card-body">
+                    <h3 class="card-title">¿Como funciona la programación?</h3>
+                    <p class="card-text">La programación funciona mediante la creación de instrucciones precisas que un
+                        ordenador puede entender y
+                        ejecutar para llevar a cabo una tarea específica.
+                        Tales como: </p>
+                    <ul>
+                        <li>
+                            <h5>Comprensión del problema:</h5>
+                            <p>En primer lugar, el programador debe comprender claramente el
+                                problema que está tratando de resolver. Esto implica identificar qué tarea se quiere
+                                realizar y cuáles son los requisitos y restricciones asociadas.</p>
+                        </li>
+                        <li>
+                            <h5>Diseño del algoritmo:</h5>
+                            <p>Luego, el programador diseña un algoritmo, que es una secuencia de pasos lógicos y
+                                ordenados que resuelven el problema identificado. El algoritmo describe la lógica de
+                                cómo se debe realizar la tarea.</p>
+                        </li>
+                        <li>
+                            <h5>Escritura del código:</h5>
+                            <p>Con el algoritmo en mente, el programador escribe el código fuente utilizando un lenguaje
+                                de programación específico. El código fuente es un conjunto de instrucciones escritas en
+                                un formato comprensible por humanos.</p>
+                        </li>
+                        <li>
+                            <h5>Compilación o interpretación:</h5>
+                            <p>Dependiendo del lenguaje de programación utilizado, el código fuente se compila o se
+                                interpreta. En la compilación, el código se traduce en un lenguaje de bajo nivel (código
+                                máquina) que el ordenador puede entender directamente. En la interpretación, el código
+                                se lee y ejecuta línea por línea por un programa llamado intérprete</p>
+                        </li>
+                        <li>
+                            <h5>Ejecución del programa:</h5>
+                            <p>Una vez compilado o interpretado, el programa resultante se ejecuta en el ordenador. El
+                                ordenador sigue las instrucciones proporcionadas por el programa y realiza las
+                                operaciones necesarias para completar la tarea especificada.</p>
+                        </li>
+                        <li>
+                            <h5>Depuración y pruebas:</h5>
+                            <p>Después de la ejecución inicial, el programador puede depurar el programa para corregir
+                                errores y realizar pruebas para asegurarse de que funcione correctamente en una variedad
+                                de situaciones y con diferentes conjuntos de datos.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card" style="max-width: 1300px;">
+                <div class="card-body">
+                    <h3 class="card-title">Lenguajes de programación</h3>
+                    <p class="card-text">
+                        Un lenguaje de programación es un conjunto de reglas y símbolos que permiten a los programadores
+                        escribir instrucciones que un ordenador puede entender y ejecutar. Estos lenguajes están
+                        diseñados para comunicar órdenes específicas a una computadora, permitiendo así la creación de
+                        programas y aplicaciones de software.</p>
                 </div>
             </div>
         </div>
