Agregacion de lenguajes

--- a/index.html
+++ b/index.html
@@ -128,11 +128,49 @@
             <div class="card" style="max-width: 1300px;">
                 <div class="card-body">
                     <h3 class="card-title">Lenguajes de programación</h3>
-                    <p class="card-text">
-                        Un lenguaje de programación es un conjunto de reglas y símbolos que permiten a los programadores
-                        escribir instrucciones que un ordenador puede entender y ejecutar. Estos lenguajes están
-                        diseñados para comunicar órdenes específicas a una computadora, permitiendo así la creación de
-                        programas y aplicaciones de software.</p>
+                    <div class="row">
+                        <div class="col-12 col-md-8">
+                            <p class="card-text">
+                                Un lenguaje de programación es un conjunto de reglas y símbolos que permiten a los
+                                programadores
+                                escribir instrucciones que un ordenador puede entender y ejecutar. Estos lenguajes están
+                                diseñados para comunicar órdenes específicas a una computadora, permitiendo así la
+                                creación de
+                                programas y aplicaciones de software.</p>
+                            <p>Los lenguajes de programación están compuestos por palabras clave, símbolos, reglas de
+                                sintaxis y estructuras de datos que definen cómo se deben escribir y organizar las
+                                instrucciones para realizar una tarea determinada. Estas instrucciones pueden variar
+                                desde operaciones simples como sumar números hasta algoritmos complejos para resolver
+                                problemas complejos.</p>
+                            <p>Los lenguajes de programación pueden clasificarse en diferentes categorías según su nivel
+                                de abstracción y su propósito, como:</p>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="lenguaje-contenedor">
+                                <img src="assets/imagenes/lenguajes.png" alt="Lenguajes de programacion"
+                                    class="img-fluid">
+                            </div>
+                        </div>
+                        <ul>
+                            <li>
+                                <h5>Lenguajes de bajo nivel:</h5>
+                                <p>Estos lenguajes están más cerca del lenguaje máquina y están diseñados para
+                                    interactuar directamente con el hardware de la computadora. Ejemplos incluyen el
+                                    lenguaje ensamblador.</p>
+                            </li>
+                            <li>
+                                <h5>Lenguajes de alto nivel:</h5>
+                                <p>Estos lenguajes están más cerca del lenguaje humano y se centran en la eficiencia del
+                                    desarrollo y la legibilidad del código. Ejemplos populares incluyen Python, Java,
+                                    C++, JavaScript, y muchos otros.</p>
+                            </li>
+                            <li>
+                                <h5>Lenguajes de programación orientados a dominios específicos (DSL): </h5>
+                                <p>Estos lenguajes están diseñados para resolver problemas específicos en un dominio
+                                    particular, como SQL para bases de datos o HTML para páginas web.</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
