--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- css -->
     <link rel="shortcut icon" href="assets/imagenes/logo_programacion.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Conceptos basicos de la programación</title>
@@ -28,10 +31,10 @@
                         <a class="nav-link" aria-current="page" href="#fundamental">Conceptos fundamentales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Diagramas de flujo</a>
+                        <a class="nav-link" href="#diagramas-flujo">Diagramas de flujo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Editores de código (IDE)</a>
+                        <a class="nav-link" href="#IDE">Editores de código (IDE)</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Programación Orientada a Objetos (POO)</a>
@@ -71,7 +74,7 @@
                                 se refiere a la creación de programas o aplicaciones mediante el desarrollo de un código
                                 fuente. Este código, escrito en lenguajes de programación, permite que los ordenadores
                                 ejecuten tareas solicitadas por los usuarios.</p>
-                            <p class="card-text"><small class="text-body-secondary">Ultima actualizción 25 de abril del
+                            <p class="card-text"><small class="text-body-secondary">Última actualizción 25 de abril del
                                     2024</small></p>
                         </div>
                     </div>
@@ -123,6 +126,8 @@
                                 de situaciones y con diferentes conjuntos de datos.</p>
                         </li>
                     </ul>
+                    <p class="card-text"><small class="text-body-secondary">Última actualizción 25 de abril del
+                            2024</small></p>
                 </div>
             </div>
             <div class="card" style="max-width: 1300px;">
@@ -151,7 +156,7 @@
                         </div>
                         <p>Los lenguajes de programación pueden clasificarse en diferentes categorías según su nivel
                             de abstracción y su propósito, como:</p>
-                        <ul>
+                        <ul class="lista-2">
                             <li>
                                 <h5>Lenguajes de bajo nivel:</h5>
                                 <p>Estos lenguajes están más cerca del lenguaje máquina y están diseñados para
@@ -171,9 +176,133 @@
                             </li>
                         </ul>
                     </div>
+                    <p class="card-text"><small class="text-body-secondary">Última actualizción 25 de abril del
+                            2024</small></p>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="diagramas-flujo" style="padding: 10px;">
+        <div class="container df-contenedor">
+            <div class="row">
+                <h2>Diagramas de flujo</h2>
+                <div class="col-12 col-md-6 d-flex df-img">
+                    <img src="assets/imagenes/diagrama-flujo.jpeg" class="img-fluid" alt="Diagrama de flujo">
+                </div>
+                <div class="col-12 col-md-6">
+                    <br>
+                    <p>Un <strong>diagrama de flujo</strong> es una representación gráfica de un proceso o algoritmo que
+                        utiliza símbolos
+                        y flechas para mostrar la secuencia de pasos necesarios para completar una tarea. Es una
+                        herramienta visual que ayuda a comprender y comunicar de manera clara y concisa la lógica de un
+                        proceso o procedimiento.</p>
+                    <p>Los diagramas de flujo suelen utilizarse en el campo de la programación, la ingeniería, la
+                        gestión de proyectos y otras áreas donde es importante entender y documentar la secuencia de
+                        pasos de un proceso. Algunos de los símbolos más comunes utilizados en los diagramas de flujo
+                        incluyen:</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <br><br>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Inicio/Fin:
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Representa el punto de inicio o finalización del proceso. Generalmente se
+                                        representa como un <strong>óvalo </strong>.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Proceso:
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Representa una acción o tarea que se realiza en el proceso. Se representa como un
+                                        <strong>rectángulo</strong>.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Decisión:
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p> Representa una bifurcación en el flujo del proceso, donde se toma una decisión
+                                        basada en una condición. Se representa como un <strong>rombo</strong>.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFor" aria-expanded="false" aria-controls="collapseThree">
+                                    Conector:
+                                </button>
+                            </h2>
+                            <div id="collapseFor" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Se utiliza para <strong>conectar partes de un diagrama de flujo</strong> que
+                                        están ubicadas en
+                                        diferentes páginas.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                                    Entrada/Salida:
+                                </button>
+                            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <p>Representa la entrada de datos al proceso o la salida de datos del proceso. Se
+                                        representa como un <strong>paralelogramo</strong>.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="df-btn d-flex df-img">
+                        <a href="https://www.lucidchart.com/pages/es/que-es-un-diagrama-de-flujo"
+                            class="btn btn-outline-success" target="_blank">
+                            <i class="bi bi-info-circle"></i>
+                            Ver mas aquí
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 d-flex df-img df-fin">
+                    <img src="assets/imagenes/simbolos-df.jpeg" class="img-fluid" alt="Simbolos de Diagrama de flujo">
+                    <p class="card-text"><small class="text-body-secondary">Última actualizción 27 de abril del
+                            2024</small></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="IDE">
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
