correccion de errores

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
     </section>
 
-    <section id="diagramas-flujo" style="padding: 10px;">
+    <section id="diagramas-flujo">
         <div class="container df-contenedor">
             <div class="row">
                 <h2>Diagramas de flujo</h2>
@@ -304,6 +304,20 @@
     <section id="IDE">
 
     </section>
+
+    <footer>
+
+        <div class="container">
+            <img src="assets/imagenes/logo_programacion.png" alt="Logo Programación" class="footer-icono">
+            <h5>Fundamentos basicos de la programación</h5>
+
+            <div class="derechos-autor text-center">
+                <p>© 2024 Copyright - Autor Eidal Marquez Ambrosio.</p>
+            </div>
+
+        </div>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
