--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                         <a class="nav-link" href="#diagramas-flujo">Diagramas de flujo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#IDE">Editores de código (IDE)</a>
+                        <a class="nav-link" href="#IDE">Entorno de Desarrollo Integrado (IDE)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Programación Orientada a Objetos (POO)</a>
+                        <a class="nav-link" href="#POO">Programación Orientada a Objetos (POO)</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Aprende a programar</a>
+                        <a class="nav-link" href="aprende.html">Aprende a programar</a>
                     </li>
                 </ul>
             </div>
@@ -302,7 +302,170 @@
     </section>
 
     <section id="IDE">
+        <div class="container ide-contendor mb-5">
+            <div class="row">
+                <h2>Entorno de Desarrollo Integrado (IDE)</h2>
+                <div class="col-12 col-md-6 ide-img text-center">
+                    <img src="assets/imagenes/IDE.jpeg" alt="Entorno de Desarrollo Integrado" class="img-fluid">
+                </div>
+                <div class="col-12 col-md-6 ">
+                    <p>Un IDE, o Entorno de Desarrollo Integrado, es una aplicación de software que proporciona
+                        herramientas integrales para desarrollar software. Por lo general, incluye un editor de código,
+                        un
+                        compilador o intérprete, herramientas de depuración, un administrador de archivos y a menudo
+                        capacidades de construcción y ejecución de programas. Los IDEs son utilizados por programadores
+                        para
+                        escribir, compilar, depurar y mantener su código de manera más eficiente, ya que ofrecen una
+                        variedad de funciones integradas que agilizan el proceso de desarrollo de software.</p>
+                    <p class="card-text"><small class="text-body-secondary">Última actualizción 11 de Mayo del
+                            2024</small></p>
+                </div>
+            </div>
+        </div>
+        <div class="container mt-5">
+            <h3 class="mb-4 text-center">IDEs y sus Características</h3>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">IDE</th>
+                        <th scope="col">Características</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Visual Studio Code</th>
+                        <td>
+                            <ul>
+                                <li>Editor de código ligero y potente</li>
+                                <li>Gran cantidad de extensiones disponibles</li>
+                                <li>Integración con Git</li>
+                                <li>Depuración integrada</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">IntelliJ IDEA</th>
+                        <td>
+                            <ul>
+                                <li>Soporte para múltiples lenguajes</li>
+                                <li>Refactorización inteligente de código</li>
+                                <li>Depuración avanzada</li>
+                                <li>Integración con frameworks populares</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Eclipse</th>
+                        <td>
+                            <ul>
+                                <li>Plataforma extensible con plugins</li>
+                                <li>Soporte para múltiples lenguajes</li>
+                                <li>Herramientas de modelado UML</li>
+                                <li>Depuración y perfilado</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">PyCharm</th>
+                        <td>
+                            <ul>
+                                <li>IDE especializado en Python</li>
+                                <li>Funciones de refactorización avanzadas</li>
+                                <li>Soporte para frameworks como Django y Flask</li>
+                                <li>Integración con herramientas de ciencia de datos</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">NetBeans</th>
+                        <td>
+                            <ul>
+                                <li>Desarrollo de aplicaciones Java</li>
+                                <li>Soporte para Java EE, PHP, y otros</li>
+                                <li>Editor de GUI Swing</li>
+                                <li>Depuración y perfilado</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Sublime Text</th>
+                        <td>
+                            <ul>
+                                <li>Editor de texto versátil y ligero</li>
+                                <li>Sistema de comandos</li>
+                                <li>Personalizable con paquetes de complementos</li>
+                                <li>Funciones avanzadas de búsqueda y reemplazo</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Atom</th>
+                        <td>
+                            <ul>
+                                <li>Editor de texto hackeable</li>
+                                <li>Desarrollado por GitHub</li>
+                                <li>Personalizable con paquetes de complementos</li>
+                                <li>Integración con Git y GitHub</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
+    <section id="POO">
+        <div class="container poo-contenedor">
+            <h2>Programación Orientada a Objetos (POO)</h2>
+            <div class="row">
+                <p class="text-justify">
+                    <strong>Programación Orientada a Objetos</strong> es un paradigma de programación que se basa en el
+                    concepto de
+                    "objetos", que son entidades que contienen datos en forma de campos, también llamados atributos, y
+                    código en forma de procedimientos, conocidos como métodos.
+
+                    La Programación Orientada a Objetos se centra en organizar el código de una manera que refleje el
+                    mundo real, donde los objetos interactúan entre sí para realizar tareas y representar entidades del
+                    dominio de la aplicación. Algunos de los principios fundamentales de la
+                    <a href="https://desarrolloweb.com/articulos/499.php" target="_blank"><strong>POO</strong></a>
+                    incluyen la
+                    encapsulación, la herencia, el polimorfismo y la abstracción.
+                </p>
+                <p class="card-text"><small class="text-body-secondary">Última actualizción 27 de abril del
+                        2024</small></p>
+                <h3 class="mt-4 text-center mb-4">Principios de la Programación Orientada a Objetos</h3>
+                <div class="col-12 col-md-6">
+                    <div class="container">
+                        <ul class="list-group">
+                            <li class="list-group-item">Encapsulación: Consiste en ocultar los detalles internos de un
+                                objeto y exponer solo la interfaz necesaria para interactuar con él.</li>
+                            <li class="list-group-item">Herencia: Permite que un objeto herede los atributos y métodos
+                                de otro objeto, fomentando la reutilización del código.</li>
+                            <li class="list-group-item">Polimorfismo: Permite que objetos de distintas clases respondan
+                                al mismo mensaje de diferentes maneras.</li>
+                            <li class="list-group-item">Abstracción: Consiste en simplificar la representación de un
+                                objeto al centrarse en los aspectos más relevantes y omitir los detalles irrelevantes.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 text-center">
+                    <a href="https://www.youtube.com/watch?v=DlphYPc_HKk" target="_blank">
+                        <img src="assets/imagenes/POO.jpeg" alt="POO" class="img-fluid">
+                    </a>
+                </div>
+                <p class="text-justify mt-5">
+                    La <strong>Programación Orientada a Objetos (POO)</strong> es importante porque proporciona una
+                    forma eficaz de
+                    organizar y estructurar el código de un programa, lo que conduce a una mayor modularidad,
+                    reutilización y mantenimiento del software.
+                    Se utiliza ampliamente en el desarrollo de software debido a su capacidad para organizar y
+                    estructurar el código de manera más modular, lo que facilita su mantenimiento, escalabilidad y
+                    reutilización. Muchos lenguajes de programación modernos, como Java, C++, Python y C#, admiten la
+                    POO y proporcionan características específicas para implementarla de manera efectiva.
+                </p>
+            </div>
+        </div>
     </section>
 
     <footer>
