--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Conceptos basicos de la programación</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
 
 
   <link rel="shortcut icon" href="assets/imagenes/logo_programacion.png" type="image/x-icon">
@@ -66,7 +64,7 @@
       <h1>Aprende Programación</h1>
       <h2>Conceptos basicos de la Programación</h2>
       <!-- <img src="assets/imagenes/logo_programacion.png" alt="Programación-logo"  data-aos="zoom-out" data-aos-delay="100"> -->
-      <img src="assets/img/hero-img.png" alt="Hero Imgs" data-aos="zoom-out" data-aos-delay="100">
+      <img src="assets/imagenes/hero-img.png" alt="Hero Imgs" data-aos="zoom-out" data-aos-delay="100">
       <a href="#get-started" class="btn-get-started scrollto">Empezar</a>
     </div>
   </section><!-- End Hero Section -->
@@ -80,7 +78,7 @@
         <div class="section-title text-center">
 
           <h2>Fundamentos basicos de la Programación </h2>
-          <p class="separator">En este curso aprenderas.</p>
+          <p class="separator text-center">En este curso aprenderas.</p>
 
         </div>
       </div>
@@ -91,7 +89,7 @@
           <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="feature-block">
 
-              <img src="assets/img/svg/cloud.svg" alt="img">
+              <img src="assets/imagenes/svg/cloud.svg" alt="img">
               <h4>Introdución a la programación</h4>
               <p>Conceptos basicos sobre lenguajes.</p>
               <!-- <a href="#">read more</a> -->
@@ -102,7 +100,7 @@
           <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="feature-block">
 
-              <img src="assets/img/svg/planet.svg" alt="img">
+              <img src="assets/imagenes/svg/planet.svg" alt="img">
               <h4>Logica de programación</h4>
               <p>Desarrolla tu logica de programación con algoritmos basicos.</p>
               <!-- <a href="#">read more</a> -->
@@ -113,7 +111,7 @@
           <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="feature-block">
 
-              <img src="assets/img/svg/asteroid.svg" alt="img">
+              <img src="assets/imagenes/svg/asteroid.svg" alt="img">
               <h4>Lenguajes de programación</h4>
               <p>Introdución a los distintos lenguajes de programación.</p>
               <!-- <a href="#">read more</a> -->
@@ -175,7 +173,7 @@
     </section><!-- End About Us Section -->
 
     <section id="lenguajes">
-      <div class="card" style="width: 100%; margin: 20px; border: none;" data-aos="fade-up">
+      <div class="card" style="width: 100%; border: none;" data-aos="fade-up">
         <div class="card-body">
           <h2 class="card-title text-center">Lenguajes de programación</h2>
           <div class="row">
@@ -469,8 +467,8 @@
           </p>
           <p class="card-text"><small class="text-body-secondary">Última actualizción 27 de abril del
               2024</small></p>
-          <h3 class="mt-4 text-center mb-4">Principios de la Programación Orientada a Objetos</h3>
-          <div class="col-12 col-md-6">
+          <h3 class="mt-4 text-center mb-4" data-aos="fade-up">Principios de la Programación Orientada a Objetos</h3>
+          <div class="col-12 col-md-6" data-aos="fade-up">
             <div class="container">
               <ul class="list-group">
                 <li class="list-group-item">Encapsulación: Consiste en ocultar los detalles internos de un
@@ -485,7 +483,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-12 col-md-6 text-center">
+          <div class="col-12 col-md-6 text-center" data-aos="fade-up">
             <a href="https://www.youtube.com/watch?v=DlphYPc_HKk" target="_blank">
               <img src="assets/imagenes/POO.jpeg" alt="POO" class="img-fluid">
             </a>
@@ -504,13 +502,26 @@
       </div>
     </section>
 
+    <!-- ======= Video Section ======= -->
+    <section id="video" class="text-center">
+      <div class="overlay">
+        <div class="container-fluid container-full" data-aos="zoom-in">
+
+          <div class="row">
+            <a href="https://www.youtube.com/watch?v=DlphYPc_HKk" class="glightbox play-btn"></a>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- End Video Section -->
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="padd-section">
 
       <div class="container" data-aos="fade-up">
         <div class="section-title text-center">
           <h2>Contacto</h2>
-          <p class="separator">Dejanos un comentario</p>
+          <p class="separator text-center">Dejanos un comentario</p>
         </div>
 
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
@@ -520,17 +531,17 @@
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
-                <p>A108 Street<br>New York, NY 535022</p>
+                <p>Mexico, Oax 71516</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <p>info@example.com</p>
+                <p>eidal@gmail.com</p>
               </div>
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>+52 9512023746</p>
               </div>
             </div>
           </div>
@@ -600,7 +611,7 @@
 
     <div class="copyrights">
       <div class="container">
-        <p>&copy; Copyright Eidal. Derechos reservados.</p>
+        <p class="text-center">&copy; Copyright Eidal. Derechos reservados.</p>
       </div>
     </div>
 
@@ -615,7 +626,6 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
